[package]
name = "epgrab"
version = "1.0.1"
edition = "2024"
authors = ["Hui-Hong You <hiroshi@ghostsinthelab.org>"]
description = "Grab DVB EPG data from Linux DVB-T devices"
license = "GPL-3.0-or-later"
repository = "https://github.com/hiroshiyui/epgrab"

[dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["ioctl", "poll"] }
